--- a/PassportManagementSystem/PassportManagementSystem.csproj
+++ b/PassportManagementSystem/PassportManagementSystem.csproj
@@ -1749,6 +1749,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\background.jpg" />
     <Content Include="Images\logo_transparent.png" />
     <Content Include="Images\PasspoerVIsa.jpg" />
     <Content Include="Models\PVMSModel.Context.tt">
